[gd_scene load_steps=21 format=2]

[ext_resource path="res://Enemies/Bat.png" type="Texture" id=1]
[ext_resource path="res://Collisions/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemies/Bat.gd" type="Script" id=3]
[ext_resource path="res://Collisions/Hitbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Shadows/SmallShadow.png" type="Texture" id=5]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=6]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=7]
[ext_resource path="res://Collisions/SoftCollision.tscn" type="PackedScene" id=8]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=9]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "Fly",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=7]
radius = 9.0
height = 0.0

[sub_resource type="CapsuleShape2D" id=8]
radius = 4.0
height = 10.0

[sub_resource type="CircleShape2D" id=9]
radius = 4.24264

[sub_resource type="CircleShape2D" id=10]

[sub_resource type="CircleShape2D" id=11]
radius = 5.09902

[node name="Bat" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
animation = "Fly"
frame = 1
playing = true
offset = Vector2( 0, -12 )

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
visible = false
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -15 )
rotation = 1.5708
shape = SubResource( 7 )

[node name="Hitbox" parent="." instance=ExtResource( 4 )]
visible = false
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, -13 )
shape = SubResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
rotation = 1.5708
shape = SubResource( 9 )

[node name="Shadow" type="Sprite" parent="."]
show_behind_parent = true
texture = ExtResource( 5 )

[node name="Stats" parent="." instance=ExtResource( 6 )]
max_health = 3

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 7 )]
visible = false
modulate = Color( 1, 1, 1, 0.643137 )

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
position = Vector2( 0, -14 )
scale = Vector2( 8, 8 )
shape = SubResource( 10 )

[node name="SoftCollision" parent="." instance=ExtResource( 8 )]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2( 0, -1 )
shape = SubResource( 11 )

[node name="WanderController" parent="." instance=ExtResource( 9 )]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="body_entered" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_body_entered"]
[connection signal="body_exited" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_body_exited"]

[editable path="Hurtbox"]

[editable path="Hitbox"]

[editable path="PlayerDetectionZone"]

[editable path="SoftCollision"]

[editable path="WanderController"]
